--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="main">
        <div class="encabezado">
-           Esta es mi cabecera
+           Esta es mi cabecera </div>
        <h2>Hablemos sobre mis mascotas</h2>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem inventore, magni sunt, necessitatibus quas deleniti pariatur eum, aspernatur eligendi soluta reprehenderit adipisci. Voluptatum numquam maxime, earum animi similique suscipit!</p>
 </body>
