Modificamos colores y letras

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="main">
        <div class="encabezado">
-           Esta es mi cabecera </div>
+           Definitivo git es interesante </div>
        <h2>Hablemos sobre mis mascotas</h2>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem inventore, magni sunt, necessitatibus quas deleniti pariatur eum, aspernatur eligendi soluta reprehenderit adipisci. Voluptatum numquam maxime, earum animi similique suscipit!</p>
        <h3>Razas mas bonitas</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere adipisci sequi consequuntur velit nesciunt ea dignissimos possimus architecto quasi fugiat sint aperiam, mollitia id iure earum eum excepturi accusantium. Ut?</p>
