cambios iguales del header con valores diferentes y icluyo h3 parrafo mas estilos h3

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
    <div class="main">
        <div class="encabezado">
-           Esta es mi cabecera </div>
+           Git es muy dificil </div>
        <h2>Hablemos sobre mis mascotas</h2>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem inventore, magni sunt, necessitatibus quas deleniti pariatur eum, aspernatur eligendi soluta reprehenderit adipisci. Voluptatum numquam maxime, earum animi similique suscipit!</p>
        <h3>Razas mas bonitas</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere adipisci sequi consequuntur velit nesciunt ea dignissimos possimus architecto quasi fugiat sint aperiam, mollitia id iure earum eum excepturi accusantium. Ut?</p>
-</body>
+
+
+<h3>Fui creado en master no genero conflicto</h3>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, magnam accusamus? Ab placeat qui debitis nesciunt amet illo asperiores voluptates dicta, sed fugit temporibus nam nisi nihil sit vitae iure.</p>
+    </body>
 </html>
