Cambio de titulo y agregamos h1
Cambiamos titulo aprendiendo git  y la etiqueta h1

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aprendiendo Git</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
    <div class="main">
        <div class="encabezado">
-           Definitivo git es interesante </div>
+       <h1>Ya aprendi Git y GitHub</h1>
+       </div>
        <h2>Hablemos sobre mis mascotas</h2>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem inventore, magni sunt, necessitatibus quas deleniti pariatur eum, aspernatur eligendi soluta reprehenderit adipisci. Voluptatum numquam maxime, earum animi similique suscipit!</p>
        <h3>Razas mas bonitas</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere adipisci sequi consequuntur velit nesciunt ea dignissimos possimus architecto quasi fugiat sint aperiam, mollitia id iure earum eum excepturi accusantium. Ut?</p>
