--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="encabezado">
        <h1>Ya aprendi Git y GitHub</h1>
        </div>
-       <h2>Hablemos sobre mis mascotas</h2>
+       <h2>Esta es la magia de git y github</h2>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem inventore, magni sunt, necessitatibus quas deleniti pariatur eum, aspernatur eligendi soluta reprehenderit adipisci. Voluptatum numquam maxime, earum animi similique suscipit!</p>
        <h3>Razas mas bonitas</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere adipisci sequi consequuntur velit nesciunt ea dignissimos possimus architecto quasi fugiat sint aperiam, mollitia id iure earum eum excepturi accusantium. Ut?</p>
 
