Cambio del h1 conexion shh
Cambio del h1 conexion shh de retorno de  remoto a local

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <div class="main">
        <div class="encabezado">
-       <h1>Ya aprendi Git y GitHub</h1>
+       <h1>Ya entendi perfecto las llaves publicas y privadas</h1>
        </div>
        <h2>Esta es la magia de git y github</h2>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rem inventore, magni sunt, necessitatibus quas deleniti pariatur eum, aspernatur eligendi soluta reprehenderit adipisci. Voluptatum numquam maxime, earum animi similique suscipit!</p>
